Add twitter @periphio reference in header
- Add twitter periphio reference in header
- Remove stale commented out code
- Change slack.png to slack.gif, a tad smaller. Do not remove slack.png yet to
  not break cached content
- Tweak spacing in header

--- a/site/layouts/partials/body_head.html
+++ b/site/layouts/partials/body_head.html
@@ -6,22 +6,18 @@
       <div>{{ .Description }}</div>
     </div>
     <div class="four columns top-right">
-      {{/*
-      <a href="https://groups.google.com/forum/#!forum/periph-users">Mailing list</a>
-      <br>
-      */}}
-      <a href="https://gophers.slack.com/messages/periph/">
-        Chat on
-        <img src="/img/slack.png" width=16 height=16>Slack
-      </a>
-        —
-      <a class="nobreak" href="https://invite.slack.golangbridge.org/">Get invite</a>
-      <br>
-      {{/*
-      <a href="https://gitter.im/periph-io/Lobby"><img
-         src="/img/gitter.png" alt="chat on gitter"></a>
-      <br>
-      */}}
+      <div>
+        <a href="https://gophers.slack.com/messages/periph/">
+          <img src="/img/slack.gif" width=16 height=16>Chat on Slack
+        </a>
+          —
+        <a class="nobreak" href="https://invite.slack.golangbridge.org/">Get invite</a>
+      </div>
+      <div>
+        <a href="https://twitter.com/periphio">
+          <img src="/img/twitter.gif" height=16 width=16>@periphio
+        </a>
+      </div>
       <iframe src="https://ghbtns.com/github-btn.html?user=google&repo=periph&type=star&count=true" frameborder="0" scrolling="0" width="170px" height="20px"></iframe>
     </div>
   </div>
