--- a/site/layouts/partials/style/site.css
+++ b/site/layouts/partials/style/site.css
@@ -119,7 +119,9 @@ header a {
 .top-right {
   margin-top: 1rem;
   font-size: 75%;
-  line-height: 200%;
+}
+.top-right iframe {
+  margin-top: 0.5rem;
 }
 /* Slack image */
 .top-right img {
