Add explicit twitter:image
Somehow it got removed (?) and broke the twitter card

--- a/site/layouts/partials/html_head.html
+++ b/site/layouts/partials/html_head.html
@@ -11,6 +11,7 @@
 <meta property="og:image" content="/img/periph-mascot-fb.png" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:creator" content="@maruel" />
+<meta name="twitter:image" content="/img/periph-mascot-fb.png">
 <script type="application/ld+json">
 {
   "@context": "http://schema.org/",
