--- a/site/layouts/partials/html_head.html
+++ b/site/layouts/partials/html_head.html
@@ -8,10 +8,10 @@
 <meta property="og:title" content="{{ .Title }}" />
 <meta property="og:description" content="{{ .Description }}" />
 <meta property="og:url" content="{{ .Permalink }}" />
-<meta property="og:image" content="/img/periph-mascot-fb.png" />
+<meta property="og:image" content="https://periph.io/img/periph-mascot-fb.png" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:creator" content="@maruel" />
-<meta name="twitter:image" content="/img/periph-mascot-fb.png">
+<meta name="twitter:image" content="https://periph.io/img/periph-mascot-fb.png">
 <script type="application/ld+json">
 {
   "@context": "http://schema.org/",
