Update twitter account to @periphio, add author link
For news pages (which is more of a blog), add author link so if other people
wants to publish an entry, they can be linked back to their home page if they
desire.

--- a/site/layouts/news/single.html
+++ b/site/layouts/news/single.html
@@ -12,6 +12,14 @@
           <div class="column">
             {{/* TODO(maruel): Add on right side? <div id="toc">{{.TableOfContents}}</div> */}}
             {{- .Content -}}
+            {{- if .Params.author}}
+              <div class="by-author">— By
+                {{if .Params.authorlink}}
+                  <a href="{{.Params.authorlink}}">{{.Params.author}}</a>
+                {{else}}{{.Params.author}}
+                {{end}}
+              </div>
+            {{end -}}
           </div>
         </div>
         <div class="row">
