--- a/site/layouts/partials/style/site.css
+++ b/site/layouts/partials/style/site.css
@@ -42,6 +42,10 @@ ol {
 a {
   text-decoration: none;
 }
+figcaption h4 {
+  font-size: 2rem;
+  text-align: center;
+}
 /* On <400px display, pad horizontally much less than skeleton default*/
 .container {
   padding: 0 5px;
