Same as for table, cut code font-size
It's the last thing that overflows on gpio_perf.md. It deemphase the code to
focus on the text instead.

--- a/site/layouts/partials/style/site.css
+++ b/site/layouts/partials/style/site.css
@@ -91,6 +91,18 @@ table {
   margin-bottom: 1.5rem;
 }
 
+/* Reduce code size to reduce overflow on mobile (similar to tables) */
+@media (max-width: 550px) {
+  code {
+    font-size: 1rem;
+  }
+}
+@media (max-width: 450px) {
+  code {
+    font-size: 0.8rem;
+  }
+}
+
 
 /*
  * Content
