--- a/site/layouts/partials/body_head.html
+++ b/site/layouts/partials/body_head.html
@@ -26,7 +26,7 @@
 
 <div class="navbar-spacer"></div>
 <nav class="navbar">
-  <div class="container">
+  <div id="topnavbar" class="container">
     <ul class="navbar-list">
       {{ partial "navbar-item-eq.html" (dict "c" . "h" "/" "n" "Home") }}
       {{ partial "navbar-item.html" (dict "c" . "h" "/news/" "n" "News") }}
