Fix incorrect comment in previous commit

--- a/site/layouts/partials/html_head_script.html
+++ b/site/layouts/partials/html_head_script.html
@@ -1,7 +1,7 @@
 <script>
 'use strict';
 
-// Automatic highlight of hash anchor and scroll to get past the navbar.
+// Automatic highlight of hash anchor.
 (function() {
   function onLoad() {
     if (window.location.hash) {
