Fix link in news section to be relative instead of absolute
i.e. the link excludes the hostname, so it works on mirror.

--- a/site/layouts/news/single.html
+++ b/site/layouts/news/single.html
@@ -30,7 +30,7 @@
             {{ end }}
             {{ if and .PrevInSection .NextInSection }} | {{ end }}
             {{ if .NextInSection }}
-              <a href="{{ .NextInSection.Permalink }}">{{.NextInSection.Title}} →</a>
+              <a href="{{ .NextInSection.RelPermalink }}">{{.NextInSection.Title}} →</a>
             {{ end }}
             <p>
           </div>
