--- a/site/layouts/partials/html_head.html
+++ b/site/layouts/partials/html_head.html
@@ -11,10 +11,10 @@
 {{- end}}
 <meta property="og:description" content="{{ .Description }}" />
 <meta property="og:url" content="{{ .Permalink }}" />
-<meta property="og:image" content="https://periph.io/img/periph-mascot-fb.png" />
+<meta property="og:image" content="{{or .Params.image .Site.Params.image}}" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:creator" content="@periphio" />
-<meta name="twitter:image" content="https://periph.io/img/periph-mascot-fb.png">
+<meta name="twitter:image" content="{{or .Params.image .Site.Params.image}}">
 <script type="application/ld+json">
 {
   "@context": "http://schema.org/",
