--- a/site/layouts/partials/style/site.css
+++ b/site/layouts/partials/style/site.css
@@ -137,6 +137,33 @@ img[alt=boardimage] {
 .highlighted {
   background-color: #FDFF9E;
 }
+.device-item {
+  display: inline-block;
+  line-height: 1em;
+  margin: 2em;
+  text-align: center;
+  width: 140px;
+  vertical-align: top;
+}
+.device-item a {
+  filter: grayscale(80%);
+}
+.device-item a:focus, .device-item a:hover {
+  filter: none;
+}
+.device-item img {
+  width: 128px;
+  height: 128px;
+  margin-bottom: 0.5rem;
+}
+.device-title {
+  margin-bottom: 0.6rem;
+}
+.device-description {
+  color: #555;
+  font-size: 1.25rem;
+  line-height: 1.4rem;
+}
 .news-hdr {
   margin-bottom: 2rem;
 }
