--- a/site/layouts/partials/body_head.html
+++ b/site/layouts/partials/body_head.html
@@ -42,19 +42,7 @@
           </ul>
         </div>
       </li>
-      <li class="navbar-item">
-        {{ partial "popover-root.html" (dict "c" . "h" "/device/" "n" "Devices") }}
-        <div class="popover">
-          <ul class="popover-list popover-list-left">
-            {{ partial "popup-item.html" (dict "c" . "h" "/device/" "n" "All devices as single page") }}
-            {{ $root := . }}
-            {{ range $i, $e := (where .Site.RegularPages "Section" "device") }}
-              {{ $name := printf "%s - %s" $e.Title $e.Params.description }}
-              {{ partial "popup-item.html" (dict "c" $root "h" $e.URL "n" $name) }}
-            {{ end }}
-          </ul>
-        </div>
-      </li>
+      {{ partial "navbar-item.html" (dict "c" . "h" "/device/" "n" "Devices") }}
       <li class="navbar-item">
         {{ partial "popover-root.html" (dict "c" . "h" "/project/" "n" "Project") }}
         <div class="popover">
