--- a/site/layouts/platform/single.html
+++ b/site/layouts/platform/single.html
@@ -10,7 +10,7 @@
       <div class="container">
         <div class="row">
           <div class="column">
-            <img style="float:right; max-width:128px; max-height:128px" src="{{.Params.picture}}">
+            <img class="top-right-picture" src="{{.Params.picture}}">
             {{- .Content -}}
           </div>
         </div>
