Add 'Fork and edit this page' in the footer
This should lower the bar for contributions to the website

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -2,9 +2,14 @@
   <div class="container">
     <div class="row">
       <div class="one-half column">
-        <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img
-          alt="Creative Commons License" class="cc40"
-          src="/img/cc4.0-80x15.png" /></a>
+        <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
+          <img alt="Creative Commons License" class="cc40"
+                                              src="/img/cc4.0-80x15.png" />
+        </a>
+        <p>
+          <a
+            href="https://github.com/periph/website/edit/master/site/content/{{.File.Path}}">Fork and edit this page</a>
+        </p>
       </div>
       <div class="one-half column">
         &copy; 2017 <a href="https://github.com/google/periph/blob/master/AUTHORS">The Periph Authors</a>.<br />
