footer: fix year, make the 'fork' message really stand out
Since it's in the footer, people will naturally be blind to this section. So
make it stand out more than the rest of the footer.

It looks huge on mobile but still fairly catchy on desktop.

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -7,12 +7,12 @@
                                               src="/img/cc4.0-80x15.png" />
         </a>
         <p>
-          <a
-            href="https://github.com/periph/website/edit/master/site/content/{{.File.Path}}">Fork and edit this page</a>
+          <a style="color:#FFCCCC; font-weight:600; font-size:150%"
+            href="https://github.com/periph/website/edit/master/site/content/{{.File.Path}}">Fork and edit this page online</a>
         </p>
       </div>
       <div class="one-half column">
-        &copy; 2017 <a href="https://github.com/google/periph/blob/master/AUTHORS">The Periph Authors</a>.<br />
+        &copy; {{.Now.Format "2006"}} <a href="https://github.com/google/periph/blob/master/AUTHORS">The Periph Authors</a>.<br />
         Web site licensed under <a rel="license"
           href="http://creativecommons.org/licenses/by/4.0/">Creative Commons
           Attribution 4.0 International License</a>.<br>
