footer: fix fork and edit style from 8ebf0894341bae00
I forgot that I disabled inline CSS :)

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -7,7 +7,7 @@
                                               src="/img/cc4.0-80x15.png" />
         </a>
         <p>
-          <a style="color:#FFCCCC; font-weight:600; font-size:150%"
+          <a class="fork-and-edit"
             href="https://github.com/periph/website/edit/master/site/content/{{.File.Path}}">Fork and edit this page online</a>
         </p>
       </div>
