--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -12,7 +12,7 @@
         </p>
       </div>
       <div class="one-half column">
-        &copy; {{.Now.Format "2006"}} <a href="https://github.com/google/periph/blob/master/AUTHORS">The Periph Authors</a>.<br />
+        &copy; {{now.Format "2006"}} <a href="https://github.com/google/periph/blob/master/AUTHORS">The Periph Authors</a>.<br />
         Web site licensed under <a rel="license"
           href="http://creativecommons.org/licenses/by/4.0/">Creative Commons
           Attribution 4.0 International License</a>.<br>
