--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -8,7 +8,9 @@
         </a>
         <p>
           <a class="fork-and-edit"
-            href="https://github.com/periph/website/edit/master/site/content/{{.File.Path}}">Fork and edit this page online</a>
+            href="https://github.com/periph/website/edit/master/site/content/{{.File.Path}}">
+            Edit this page on GitHub
+          </a>
         </p>
       </div>
       <div class="one-half column">
