Redo the root page and the /project/ pages.
- Trim again the root page
- Move source code into /project/
- Move philosophy into /project/goals/
- Update /project/tools to use bootstrap/cmd/push

/project/... is still a mess, but at least the root page is less cluttered. This
is important as I want to add pictures on the root page.

--- a/site/layouts/partials/body_head.html
+++ b/site/layouts/partials/body_head.html
@@ -36,8 +36,8 @@
         {{ partial "popover-root.html" (dict "c" . "h" "/project/" "n" "Project") }}
         <div class="popover">
           <ul class="popover-list">
-            {{ partial "popup-item.html" (dict "c" . "h" "/project/" "n" "Overview") }}
-            {{ partial "popup-item.html" (dict "c" . "h" "/project/goals/" "n" "Goals") }}
+            {{ partial "popup-item.html" (dict "c" . "h" "/project/" "n" "Overview & Source code") }}
+            {{ partial "popup-item.html" (dict "c" . "h" "/project/goals/" "n" "Goals & Philosophy") }}
             {{ partial "popup-item.html" (dict "c" . "h" "/project/design/" "n" "Design") }}
             {{ partial "popup-item.html" (dict "c" . "h" "/project/contributing/" "n" "Contributing") }}
             {{ partial "popup-item.html" (dict "c" . "h" "/project/library/" "n" "Library") }}
