--- a/site/layouts/project/list.html
+++ b/site/layouts/project/list.html
@@ -10,8 +10,7 @@
       <div class="container">
         <div class="row">
           <div class="column">
-            <img class="top-right-picture" src="{{.Params.picture}}">
-            {{- .Content -}}
+            {{ .Content }}
           </div>
         </div>
       </div>
