--- a/site/layouts/_default/single.html
+++ b/site/layouts/_default/single.html
@@ -10,7 +10,9 @@
       <div class="container">
         <div class="row">
           <div class="column">
-            {{/* TODO(maruel): Add on right side? <div id="toc">{{.TableOfContents}}</div> */}}
+            {{if .Params.picture}}
+              <img class="top-right-picture" src="{{.Params.picture}}">
+            {{end}}
             {{- .Content -}}
           </div>
         </div>
