Add pictures on the root page
This largely increase the root page weight, but people likes picture more than
text.

Tweak the CSS so that images are at 64px in the root page but 128px in the
sections pages.

Remove reference to Jessie, it's kinda old.

--- a/site/layouts/_default/list.html
+++ b/site/layouts/_default/list.html
@@ -13,11 +13,11 @@
             {{ .Content }}
             <ul>
               {{ range .Data.Pages.ByWeight }}
-              <li class="device-item">
+              <li class="table-item table-item-large">
                 <a href="{{.RelPermalink}}">
                   <img src="{{.Params.picture}}" />
-                  <p class="device-title">{{ .Title }}<br>
-                  <p class="device-description">{{ .Params.description }}</p>
+                  <p class="table-item-title">{{ .Title }}<br>
+                  <p class="table-item-description">{{ .Params.description }}</p>
                   </p>
                 </a>
               </li>
