Replace the Raleway font by Karla.
It's easier to read and more dense. Stop fetching weight 700, it was used
exactly once (on the menu), replaced this with a blue drop shadow to reduce
network usage.

--- a/site/layouts/partials/style/site.css
+++ b/site/layouts/partials/style/site.css
@@ -269,7 +269,7 @@ header a {
 /* NAVBAR */
 
 .currentLink {
-  font-weight: 900 !important;
+  text-shadow: 1px 1px 5px blue;
 }
 
 .navbar, .navbar-spacer {
