Move the 'Edit this page' link at the top.
It's a bit more noisy, but it's needed for people to see it...

--- a/site/layouts/partials/body_head.html
+++ b/site/layouts/partials/body_head.html
@@ -48,3 +48,11 @@
     </ul>
   </div>
 </nav>
+
+<div class="fork-and-edit">
+  <a
+     href="https://github.com/periph/website/edit/master/site/content/{{.File.Path}}">
+    <img src="/img/branch.png">
+    Edit this page
+  </a>
+</div>
