style: use clean underline for selected item
The glow was horrible. It was a quick hack to reduce the total page
payload size. The previous current page style was to use font weight
700, which required to load the full font for only the title.

The underline is much cleaner, is trivial CSS and doesn't require the
use of the heavy weight font.

--- a/site/layouts/partials/style/site.css
+++ b/site/layouts/partials/style/site.css
@@ -281,7 +281,10 @@ header a {
 /* NAVBAR */
 
 .currentLink {
-  text-shadow: 1px 1px 5px blue;
+  border-bottom-color: #2a78bd;
+  border-bottom-style: solid;
+  border-bottom-width: 3px;
+  border-radius: 2px;
 }
 
 .navbar, .navbar-spacer {
