invite.slack.golangbridge.org doesn't support https anymore
Revert to http, which seems to work fine. It now simply redirects to
https://gophers.slack.com/join/shared_invite/<key>

--- a/site/layouts/partials/body_head.html
+++ b/site/layouts/partials/body_head.html
@@ -11,7 +11,7 @@
           <img src="/img/slack.gif" width=16 height=16>Chat on Slack
         </a>
           —
-        <a class="nobreak" href="https://invite.slack.golangbridge.org/">Get invite</a>
+        <a class="nobreak" href="http://invite.slack.golangbridge.org/">Get invite</a>
       </div>
       <div>
         <a href="https://twitter.com/periphio">
