templates/gopkg.html: Update for caddy2
The template variables and functions changed.

--- a/site/static/templates/gopkg.html
+++ b/site/static/templates/gopkg.html
@@ -2,9 +2,9 @@
   Implement redirection for periph.io/x/... URLs.
   This file is processed by Caddy, not Hugo!
   */}}
-{{- $path := .URL.Query.Get "path" -}}
+{{- $path := .Req.URL.Query.Get "path" -}}
 {{- if len $path | ne 0 -}}
-  {{- $repoName := index (.Split $path "/") 2 -}}
+  {{- $repoName := index (splitList $path "/") 2 -}}
 <!DOCTYPE html>
 <html lang="en">
 <head>
