Update http: links to https:

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="one-half column">
-        <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
+        <a rel="license" href="https://creativecommons.org/licenses/by/4.0/">
           <img alt="Creative Commons License" class="cc40"
                                               src="/img/cc4.0-80x15.png" />
         </a>
@@ -10,7 +10,7 @@
       <div class="one-half column">
         &copy; {{now.Format "2006"}} <a href="https://github.com/periph/conn/blob/main/AUTHORS">The Periph Authors</a>.<br />
         Web site licensed under <a rel="license"
-          href="http://creativecommons.org/licenses/by/4.0/">Creative Commons
+          href="https://creativecommons.org/licenses/by/4.0/">Creative Commons
           Attribution 4.0 International License</a>.<br>
         Mascot created by Mérédith Ruel, inspired from original work by Renée
         French.
