--- a/site/layouts/news/list.html
+++ b/site/layouts/news/list.html
@@ -11,7 +11,7 @@
         <div class="row">
           <div class="column">
             {{ $cur := . }}
-            {{ range $e := .Site.AllRegularPages.ByDate.Reverse }}
+            {{ range $e := .Site.RegularPages.ByDate.Reverse }}
               {{ if hasPrefix $e.RelPermalink $cur.RelPermalink }}
                 <div class="news-hdr">
                   <h1 id="{{ .File.TranslationBaseName }}"><a href="{{.RelPermalink}}">{{.Title}}</a></h1>
